# rustforum

./: .gitignore  CLAUDE.md  CONTRIBUTING_CN.md  Cargo.toml  DEPLOY.md  DEPLOY_CN.md  LICENSE  README.md  README_CN.md  deploy.example.py
migrations/: 001_init.sql  002_messages.sql  003_notifications.sql  004_checkins.sql  005_essence.sql  006_admin.sql  007_login_logs.sql  008_forum_permissions.sql  009_email_verification.sql  010_ai_shares.sql
src/: cache.rs  config.rs  db.rs  email.rs  main.rs  site_config.rs  templates.rs
src/handlers/: about.rs  admin.rs  ai_share.rs  api.rs  auth.rs  avatar.rs  backup.rs  checkin.rs  forum.rs  index.rs  message.rs  mod.rs  notification.rs  profile.rs  report.rs  setup.rs  thread.rs
src/middleware/: auth.rs  csrf.rs  mod.rs  rate_limit.rs  setup_guard.rs
src/models/: ai_share.rs  blacklist.rs  forum.rs  forum_moderator.rs  message.rs  mod.rs  notification.rs  post.rs  report.rs  thread.rs  user.rs
static/js/: app.js
